--- a/app/views/quiz.html
+++ b/app/views/quiz.html
@@ -4,15 +4,13 @@
 
         <div class="btn-toolbar">
             <button class="btn" ng-repeat="answer in quiz.DataService.quizQuestions"
-                    ng-class="{'btn-danger': !answer.selected, 'btn-info': answer.selected}"
-            ><span class="glyphicon" ng-class="{'glyphicon-question-sign': !answer.selected,
-            'glyphicon-pencil': answer.selected}"></span></button>
+                    ng-class="{'btn-danger': answer.selected == null, 'btn-info': answer.selected !== null}"
+            ><span class="glyphicon" ng-class="{'glyphicon-question-sign':  answer.selected === null,
+            'glyphicon-pencil': answer.selected !== null}"></span></button>
         </div>
     </div>
 
     <div class="col-sm-4">
-
-
         <div class="row">
             <h4>Legend</h4>
 
@@ -32,15 +30,20 @@
 <div class="row">
     <h2>Questions</h2>
 
-    <div class="well well-sm">
+    <div class="well well-md">
         <div class="row">
             <div class="col-sm-12">
                 <h4>{{quiz.activeQuestion+ 1 + '. ' + quiz.DataService.quizQuestions[quiz.activeQuestion].text}}</h4>
             </div>
             <div class="col-sm-6"
                  ng-repeat="answer in quiz.DataService.quizQuestions[quiz.activeQuestion].possibilities">
-                <h4 class="answer">{{answer.answer}}</h4>
+                <h4 class="answer" ng-click="quiz.selectedAnswer($index)"
+                    ng-class="{'bg-info': $index === quiz.DataService.quizQuestions[quiz.activeQuestion].selected}"
+                >{{answer.answer}}</h4>
             </div>
+
         </div>
+
+        <button class="btn btn-warning">Continue</button>
     </div>
 </div>
