--- a/app/views/quiz.html
+++ b/app/views/quiz.html
@@ -44,6 +44,6 @@
 
         </div>
 
-        <button class="btn btn-warning">Continue</button>
+        <button class="btn btn-warning" ng-click="quiz.questionAnswered()">Continue</button>
     </div>
 </div>
