--- a/app/views/user-form.html
+++ b/app/views/user-form.html
@@ -6,7 +6,8 @@
                 <h3>USER FORM</h3>
             </div>
             <div class="panel-body">
-                <form name="userform" class="form-horizontal" ng-submit="form.userDetails(user, userform.$valid)" novalidate>
+                <form name="userform" class="form-horizontal" ng-submit="form.userDetails(user, userform.$valid)"
+                      novalidate>
                     <div class="form-group">
                         <label class="control-label col-sm-3">Username: </label>
 
@@ -28,14 +29,12 @@
                     </div>
 
                     <div class="alert alert-danger col-sm-12 top-buffer"
-                         ng-show="userform.$submitted && (userform.email.$invalid || userform.username.$invalid)">Please fill all fields
+                         ng-show="userform.$submitted && (userform.email.$invalid || userform.username.$invalid)">
+                        Please fill all fields
                     </div>
 
                 </form>
-
-
             </div>
-
         </div>
     </div>
 </div>
