--- a/public/views/login.html
+++ b/public/views/login.html
@@ -17,21 +17,25 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-sm-3">Email: </label>
+                        <label class="control-label col-sm-3">Password: </label>
 
                         <div class="col-sm-6">
-                            <input name="email" type="email" class="form-control" ng-model="user.email"
-                                   placeholder="email" required>
+                            <input name="password" type="password" class="form-control" ng-model="user.password"
+                                   placeholder="Password" required>
                         </div>
                     </div>
-                    <div class="col-sm-offset-3 col-sm-10">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
+
+                    <button type="submit" class="btn btn-primary col-sm-offset-3">Login</button>
+
+                    <button class="btn btn-success" ui-sref="signup">Signup</button>
+
 
                     <div class="alert alert-danger col-sm-12 top-buffer"
-                         ng-show="userform.$submitted && (userform.email.$invalid || userform.username.$invalid)">
+                         ng-show="userform.$submitted && (userform.password.$invalid || userform.username.$invalid)">
                         Please fill all fields
                     </div>
+                    <div class="alert alert-danger top-buffer" ng-show="form.successMsg">{{form.successMsg}}</div>
+                    <div class="alert alert-success top-buffer" ng-show="form.errorMsg">{{form.errorMsg}}</div>
 
                 </form>
             </div>
